--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -144,6 +144,8 @@
    				border-radius: 20px;
 			}
   			div.timetable {
+  				padding: 10px 15px 15px 15px;
+    			background-color: #f8f8f8;
   				font-size: small;
   				margin-top: 20px;
   				span {
