--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11468,13 +11468,24 @@ section.home-footer .row > div {
         font-size: 2.1em !important;
         text-align: center;
         color: white;
-        width: 100%;
-        margin-top: 30px; }
+        width: 100%; }
+        @media screen and (min-width: 1200px) {
+          .salon#content .sidebar .promo-sidebar .inline-promo {
+            margin-top: 30px; } }
+        @media screen and (min-width: 768px) and (max-width: 991px) {
+          .salon#content .sidebar .promo-sidebar .inline-promo {
+            margin-top: 60px; } }
         .salon#content .sidebar .promo-sidebar .inline-promo p {
           font-weight: bold;
           margin-top: 0; }
           .salon#content .sidebar .promo-sidebar .inline-promo p:first-child {
-            font-size: 3.1em; }
+            font-size: 2.8em; }
+            @media screen and (min-width: 1200px) {
+              .salon#content .sidebar .promo-sidebar .inline-promo p:first-child {
+                font-size: 3.1em; } }
+            @media screen and (min-width: 768px) and (max-width: 991px) {
+              .salon#content .sidebar .promo-sidebar .inline-promo p:first-child {
+                font-size: 3.1em; } }
           .salon#content .sidebar .promo-sidebar .inline-promo p:nth-child(2) {
             margin-top: -30px; }
         .salon#content .sidebar .promo-sidebar .inline-promo img {
