--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -551,12 +551,23 @@
 				text-align: center;
 				color: white;
 				width: 100%;
-				margin-top: 30px;
+				@media screen and (min-width: $screen-lg-min) {
+					margin-top: 30px;
+				}
+				@media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+					margin-top: 60px;
+				}
 				p {
 					font-weight: bold;
 					margin-top: 0;
 					&:first-child {
-						font-size: 3.1em;
+						font-size: 2.8em;
+						@media screen and (min-width: $screen-lg-min) {
+							font-size: 3.1em;
+						}
+						@media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+							font-size: 3.1em;
+						}
 					}
 					&:nth-child(2) {
 						margin-top: -30px;
