--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11131,9 +11131,6 @@ section.home-footer .row > div {
       position: relative;
       width: 100%;
       padding-top: 16px; }
-      @media screen and (min-width: 768px) {
-        .salon#content .main-content section.salon-info.open-timetable {
-          margin-bottom: 75px; } }
       .salon#content .main-content section.salon-info p {
         font-size: 1.6em;
         font-weight: 200;
@@ -11145,17 +11142,13 @@ section.home-footer .row > div {
         width: 100%;
         border-radius: 20px; }
       .salon#content .main-content section.salon-info div.timetable {
-        padding: 10px 15px 15px 15px;
-        background-color: #f8f8f8;
         font-size: small;
-        margin-top: 20px;
-        font-weight: normal;
-        z-index: 1; }
+        margin-top: 15px; }
         .salon#content .main-content section.salon-info div.timetable span {
           padding: 0; }
         @media screen and (max-width: 480px) {
           .salon#content .main-content section.salon-info div.timetable span.extra-small {
-            width: 25%; } }
+            width: 20%; } }
       @media screen and (max-width: 767px) {
         .salon#content .main-content section.salon-info .row {
           padding-left: 15px; } }
@@ -11178,53 +11171,6 @@ section.home-footer .row > div {
         .salon#content .main-content section.salon-info .prix span.glyphicon, .salon#content .main-content section.salon-info .tags span.glyphicon {
           color: #595959;
           width: 1.4em; }
-      .salon#content .main-content section.salon-info .horaires {
-        margin: 20px 0 20px 0;
-        width: 100vw; }
-        .salon#content .main-content section.salon-info .horaires a {
-          display: inline-block;
-          text-decoration: none;
-          color: black;
-          font-weight: bold;
-          position: relative; }
-          .salon#content .main-content section.salon-info .horaires a .title {
-            margin: 0;
-            display: inline-block;
-            color: #fe5b5f;
-            font-size: 1.8em;
-            font-weight: bold;
-            border: solid #f8f8f8;
-            border-width: 2px;
-            padding: 2px 20px 2px 10px;
-            border-radius: 5px; }
-            @media screen and (max-width: 767px) {
-              .salon#content .main-content section.salon-info .horaires a .title {
-                font-size: 1.4em; } }
-            @media screen and (max-width: 350px) {
-              .salon#content .main-content section.salon-info .horaires a .title {
-                font-size: 1.3em; } }
-          .salon#content .main-content section.salon-info .horaires a .today {
-            border: 2px #f8f8f8 solid;
-            display: inline-block;
-            min-height: 100%;
-            background-color: #f8f8f8;
-            border-radius: 5px;
-            margin-left: -10px;
-            padding: 2px 20px 2px 20px;
-            font-size: 1.8em;
-            color: #666b74; }
-            @media screen and (max-width: 767px) {
-              .salon#content .main-content section.salon-info .horaires a .today {
-                font-size: 1.4em; } }
-            @media screen and (max-width: 350px) {
-              .salon#content .main-content section.salon-info .horaires a .today {
-                font-size: 1.3em; } }
-          .salon#content .main-content section.salon-info .horaires a .timetable {
-            position: absolute;
-            width: 200px;
-            top: -20px;
-            right: -195px;
-            border-radius: 5px; }
   .salon#content section.salon-content {
     margin-top: 20px;
     margin-bottom: 70px; }
@@ -11468,24 +11414,13 @@ section.home-footer .row > div {
         font-size: 2.1em !important;
         text-align: center;
         color: white;
-        width: 100%; }
-        @media screen and (min-width: 1200px) {
-          .salon#content .sidebar .promo-sidebar .inline-promo {
-            margin-top: 30px; } }
-        @media screen and (min-width: 768px) and (max-width: 991px) {
-          .salon#content .sidebar .promo-sidebar .inline-promo {
-            margin-top: 60px; } }
+        width: 100%;
+        margin-top: 30px; }
         .salon#content .sidebar .promo-sidebar .inline-promo p {
           font-weight: bold;
           margin-top: 0; }
           .salon#content .sidebar .promo-sidebar .inline-promo p:first-child {
-            font-size: 2.8em; }
-            @media screen and (min-width: 1200px) {
-              .salon#content .sidebar .promo-sidebar .inline-promo p:first-child {
-                font-size: 3.1em; } }
-            @media screen and (min-width: 768px) and (max-width: 991px) {
-              .salon#content .sidebar .promo-sidebar .inline-promo p:first-child {
-                font-size: 3.1em; } }
+            font-size: 3.1em; }
           .salon#content .sidebar .promo-sidebar .inline-promo p:nth-child(2) {
             margin-top: -30px; }
         .salon#content .sidebar .promo-sidebar .inline-promo img {
