--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -361,6 +361,8 @@
 				border-color: $bg2;
 				border-width: 5px;
 				padding-left: 15px;
+				padding-right: 15px;
+				margin-right: 0;
 			}
 			&:nth-child(4) {
 				h4 {
