--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -305,20 +305,20 @@
 						/* @include mask(url(../img/icons/info.svg) no-repeat 100% 100%);
 						background-color: #666b74;
 						*/
-						background-image: url(../img/icons/info.png);
+						background-image: url(../img/icons/info.svg);
 						background-size: contain;					
     				}
 				}
 				&:nth-child(2) {
 					.icon-nav {
-						background-image: url(../img/icons/avis.png);
+						background-image: url(../img/icons/avis.svg);
 						background-size: contain;
 					}
 				}
 				&:last-child {
 					border-right: none;
 					.icon-nav {
-						background-image: url(../img/icons/hairfie.png);
+						background-image: url(../img/icons/hairfie.svg);
 						background-size: contain;
 					}
 				}
@@ -326,20 +326,20 @@
 			li.active {
 				&:first-child {
 					.icon-nav {
-						background-image: url(../img/icons/info-selected.png);
+						background-image: url(../img/icons/info-selected.svg);
 						background-size: contain;
 					}
 				}
 				&:nth-child(2) {
 					.icon-nav {
-						background-image: url(../img/icons/avis-selected.png);
+						background-image: url(../img/icons/avis-selected.svg);
 						background-size: contain;
 					}
 				}
 				&:last-child {
 					border-right: none;
 					.icon-nav {
-						background-image: url(../img/icons/hairfie-selected.png);
+						background-image: url(../img/icons/hairfie-selected.svg);
 						background-size: contain;
 					}
 				}
