--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11051,12 +11051,31 @@ section.home-footer .row > div {
       right: 0;
       position: absolute;
       bottom: 0px; }
-      .salon#content #carousel-salon .carousel-info .star {
-        margin: 2px; }
-        @media screen and (max-width: 767px) {
-          .salon#content #carousel-salon .carousel-info .star {
-            width: 10px;
-            margin: 1px; } }
+      .salon#content #carousel-salon .carousel-info .stars {
+        display: inline-block; }
+        .salon#content #carousel-salon .carousel-info .stars .star {
+          margin: 2px; }
+          @media screen and (max-width: 767px) {
+            .salon#content #carousel-salon .carousel-info .stars .star {
+              width: 10px;
+              margin: 1px; } }
+      .salon#content #carousel-salon .carousel-info .num-reviews {
+        color: #fe5b5f;
+        font-size: 1.4em;
+        font-weight: bold;
+        text-decoration: underline; }
+        @media screen and (min-width: 992px) {
+          .salon#content #carousel-salon .carousel-info .num-reviews {
+            position: absolute;
+            left: 100%;
+            top: 8px;
+            width: inherit; } }
+        @media screen and (min-width: 480px) and (max-width: 991px) {
+          .salon#content #carousel-salon .carousel-info .num-reviews {
+            float: right; } }
+        @media screen and (max-width: 480px) {
+          .salon#content #carousel-salon .carousel-info .num-reviews {
+            display: none; } }
       .salon#content #carousel-salon .carousel-info div div:first-child {
         padding-left: 0; }
         @media screen and (max-width: 767px) {
