--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -367,6 +367,44 @@
 			}
 		}
 		section {
+			div.average-price {
+					font-weight: bold;
+					font-size: 1.5em;
+				    background-color: $bg3;
+    				height: 70px;
+    				@media screen and (max-width: $screen-xs-max) {
+    					height: 35px;
+    					font-size: 1.3em;
+    				}
+    				border: none;
+    				div.gender {
+    					margin-top: 25px;
+    					@media screen and (max-width: $screen-xs-max) {
+    						margin-top: 12px;
+    					}
+    				}
+    				div.price {
+    					background-color: white;
+    					font-size: 1.6em;
+    					color: $hairfie;
+    					padding: 31px;
+    				    position: absolute;
+    					right: 0;
+    					top: -15px;
+    					width: 100px;
+    					height: 100px;
+					    display: inline-block;
+					    border: 2px solid $hairfie;
+					    border-radius: 100%;
+					    @media screen and (max-width: $screen-xs-max) {
+    						width: 50px;
+    						height: 50px;
+    						font-size: 1.4em;
+    						padding: 10px;
+    						top: -7px;
+    					}
+    				}
+			}
 			@media screen and (max-width: $screen-xs-max) {
 				padding-left: 15px;
 				padding-right: 15px;
