--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -64,7 +64,7 @@ ul {
 		margin-top: 0;
 	}
 	h3 {
-		font-size: 2.4;
+		font-size: 2.4em;
 		margin-top:25px;
 		margin-bottom:25px;
 		letter-spacing: 2px;
