--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -367,6 +367,15 @@
 			}
 		}
 		section {
+			p.title {
+			    margin-left: -15px;
+			    color: $hairfie;
+			    margin-top: -20px;
+			    margin-bottom: 25px;
+			    letter-spacing: 1px;
+			    font-weight: 400;
+			    font-size: 1.8em;
+			}
 			div.average-price {
 					font-weight: bold;
 					font-size: 1.5em;
