--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -485,6 +485,7 @@
 				margin-left: -16px;
 				div {
 					&.title {
+						font-weight: bold;
 						height: 35px;
 						&:nth-child(1n + 2) {
 							line-height: 35px;
