--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9124,7 +9124,7 @@ ul {
     font-size: 1.6em;
     letter-spacing: 1px; }
   #content p {
-    font-size: 1.3em; }
+    font-size: 1.4em; }
   #content ul.nav {
     margin-left: 15px;
     margin-right: 15px; }
@@ -11060,7 +11060,7 @@ section.home-footer .row > div {
               width: 10px;
               margin: 1px; } }
       .salon#content #carousel-salon .carousel-info .num-reviews {
-        color: #fe5b5f;
+        color: white;
         font-size: 1.4em;
         font-weight: bold;
         text-decoration: underline; }
@@ -11156,7 +11156,7 @@ section.home-footer .row > div {
       padding-top: 16px; }
       @media screen and (min-width: 768px) {
         .salon#content .main-content section.salon-info.open-timetable {
-          margin-bottom: 75px; } }
+          margin-bottom: 100px; } }
       .salon#content .main-content section.salon-info p {
         font-size: 1.6em;
         font-weight: 200;
