--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9829,6 +9829,16 @@ div.pagination {
     color: white;
     background-color: #00B0B9 !important; }
 
+.contest {
+  margin-left: -30px;
+  margin-right: -30px; }
+  .contest .woobox-offer {
+    display: block !important;
+    margin: auto; }
+    @media screen and (max-width: 768px) {
+      .contest .woobox-offer {
+        margin-top: 100px; } }
+
 header {
   width: 100%;
   height: 60px;
