--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12371,7 +12371,7 @@ section.home-footer .row > div {
 .container.user#content .main-content {
   margin-top: 20px;
   margin-bottom: 70px; }
-  .container.user#content .main-content img.ProfilePicture {
+  .container.user#content .main-content .ProfilePicture {
     display: block;
     width: 14em;
     border-radius: 100%;
