--- a/public/scss/partials/_page-user.scss
+++ b/public/scss/partials/_page-user.scss
@@ -3,7 +3,7 @@
         margin-top: 20px;
         margin-bottom: 70px;
 
-        img.ProfilePicture {
+        .ProfilePicture {
                 display: block;
                 width: 14em;
                 border-radius: 100%;
