--- a/public/scss/partials/_footer.scss
+++ b/public/scss/partials/_footer.scss
@@ -74,6 +74,18 @@ footer {
 
 		}
 	}
+	.footer-background {
+	    @media screen and (min-width: $screen-sm-min) {
+	        height: 340px; width: 100vw;
+	        left: calc(-50vw + 50%);
+	        background: url(../img/bg-download-lite.jpg) no-repeat center center;
+	        background-size: cover;
+	        margin: 0;
+	        position: absolute;
+    		top: 0;
+    		opacity: 0.2;
+	    }
+	}
 	p {
 		font-size: 1.6em;
 		padding-bottom: 30px;
