--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10096,7 +10096,7 @@ header:not(.white) .dropdown-menu {
 	   F O O T E R
 ////////////////////////////////*/
 footer {
-  background-color: #353535;
+  background-color: #474747;
   padding-top: 55px;
   position: relative; }
   footer:before {
@@ -10140,6 +10140,13 @@ footer {
     background-size: 100%;
     top: 50%;
     right: 5%; }
+  footer .footer-bg {
+    background-color: #353535;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 400px; }
   footer .footer-links {
     list-style-type: none;
     margin: 0 auto;
