--- a/public/scss/partials/_footer.scss
+++ b/public/scss/partials/_footer.scss
@@ -2,7 +2,7 @@
 	   F O O T E R
 ////////////////////////////////*/
 footer {
-	background-color: $bgfooter;
+	background-color: #474747;
 	padding-top: 55px;
 	@include fullWidthBg($bgfooter);
 	@media screen and (max-width: $screen-sm-min) {
@@ -26,6 +26,15 @@ footer {
 		background-size: 100%;
 		top: 50%;
 		right: 5%;
+	}
+	.footer-bg {
+		background-color: $bgfooter;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 400px;
+
 	}
 	.footer-links {
 		list-style-type: none;
