--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9573,18 +9573,16 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
       font-size: 1.6em;
       text-align: center;
       color: #fff;
-      color: black !important;
-      background-color: white;
-      border: 1px solid #353535;
-      border-collapse: separate;
-      border-spacing: 10px;
-      box-shadow: 0px 0px 0px 2px white;
+      border: 1px solid white;
       border-radius: 100%;
       padding: 10px; }
       .social-links li a:hover, .social-links li a:focus, .social-links li a:active, .social-links li a:visited {
         outline: none;
         text-decoration: none;
         color: #fff; }
+      .social-links li a:hover {
+        color: black !important;
+        background-color: white !important; }
 
 .hairfies > div:first-child {
   margin-left: 0;
@@ -10124,7 +10122,8 @@ footer {
     font-weight: 400;
     color: white;
     text-align: center;
-    letter-spacing: .5px; }
+    letter-spacing: .5px;
+    position: relative; }
   footer p:last-child {
     margin-bottom: 0; }
   footer .hr {
@@ -10146,7 +10145,7 @@ footer {
     top: 0;
     left: 0;
     width: 100%;
-    height: 400px; }
+    height: 480px; }
   footer .footer-links {
     list-style-type: none;
     margin: 0 auto;
@@ -10188,17 +10187,17 @@ footer {
     padding-bottom: 30px; }
   footer h4 {
     font-size: 3em;
-    position: relative;
     width: 400px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px; }
-    footer h4 object {
-      height: 75px;
-      width: 75px;
-      position: absolute;
-      left: 0;
-      top: -20px; }
+  footer object {
+    height: 75px;
+    width: 75px;
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto; }
 
 footer.mobile {
   padding-left: 10px;
