--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -549,14 +549,13 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
 		}
 		a {
 			@include socicon(1.6em,#fff);
-			color: black !important;
-			background-color: white;
-			border: 1px solid $bgfooter;
-    		border-collapse: separate;
-    		border-spacing: 10px;
-    		box-shadow: 0px 0px 0px 2px white;
+			border: 1px solid white;
 			border-radius: 100%;
-			padding: 10px;
+				padding: 10px;
+				&:hover {
+					color: black !important;
+					background-color: white !important;
+				}
 		}
 	}
 }
