--- a/public/scss/partials/_footer.scss
+++ b/public/scss/partials/_footer.scss
@@ -34,7 +34,12 @@ footer {
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 480px;
+		@media screen and (min-width: $screen-lg-min) {
+			height: 480px;
+		}
+		@media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+			height: 500px;
+		}
 
 	}
 	.footer-links {
