--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10144,8 +10144,13 @@ footer {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 480px; }
+    width: 100%; }
+    @media screen and (min-width: 1200px) {
+      footer .footer-bg {
+        height: 480px; } }
+    @media screen and (min-width: 992px) and (max-width: 1199px) {
+      footer .footer-bg {
+        height: 500px; } }
   footer .footer-links {
     list-style-type: none;
     margin: 0 auto;
