--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -489,15 +489,15 @@ section.home-footer {
         h3 {
             font-family: $font-main;
             font-weight: $semiBold;
-            color: #848b95;
+            color: #FE5B5F;
             text-transform: uppercase;
-            font-size: 1.6em;
+            font-size: 3em;
         }
         p {
             font-weight: $light;
             color: $darkgrey;
             font-size: 1.4em;
-            line-height: 2em;
+            line-height: 1.2em;
             letter-spacing: 1px;
             width: 78%;
             margin: 10px auto;
