--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10003,20 +10003,7 @@ header:not(.white) .dropdown-menu {
     max-width: 100%;
     position: fixed;
     top: 0;
-    z-index: 999;
-    /* 		a.menu-trigger {
-			background: url(../img/mobile-menu.png) no-repeat center center;
-			background-size: 90%;
-			margin-top: 25px;
-			width: 28px;
-			height: 28px;
-			margin-right: 15px;
-			&.close {
-				background: url(../img/mobile-menu-close.png) no-repeat center center;
-				background-size: 90%;
-				opacity: 1;
-			}
-		} */ }
+    z-index: 999; }
     .mobile-nav header a.logo {
       background: url(../img/logo-red.png) no-repeat center left;
       background-size: 100%;
